{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 736,
  "lineage": "be46f2ca-0b26-63c5-1476-8c2d968e5711",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa787af8cdd260f1",
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:instance/i-0e6f0c94274768e62",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6f0c94274768e62",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0420fa70997c8004e",
            "private_dns": "ip-10-0-101-162.ap-southeast-1.compute.internal",
            "private_ip": "10.0.101.162",
            "public_ip": "52.221.206.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0658092704b5d4dc9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003cc8f4c5c635e22",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ae4128b1463a97c2"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair",
            "aws_security_group.allow-ssh-dev",
            "aws_security_group.allow-ssh-prod",
            "data.aws_ami.ubuntu",
            "module.vpc-dev.aws_subnet.public",
            "module.vpc-dev.aws_vpc.this",
            "module.vpc-dev.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc-prod.aws_subnet.public",
            "module.vpc-prod.aws_vpc.this",
            "module.vpc-prod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:security-group/sg-0aca076bd8003160b",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aca076bd8003160b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "473359703960",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "tags_all": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-01533efce9840e66e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-dev.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:security-group/sg-0ae4128b1463a97c2",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae4128b1463a97c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "473359703960",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "tags_all": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-091a32e46ae2dafa4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:security-group/sg-08b3b2f3d5c218734",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08b3b2f3d5c218734",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 81,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 81
              }
            ],
            "name": "example1",
            "name_prefix": "",
            "owner_id": "473359703960",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06f14de523b3a40be"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:security-group/sg-0f82fa510300f4d53",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f82fa510300f4d53",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "127.0.0.1/32",
                  "192.168.0.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "example2",
            "name_prefix": "",
            "owner_id": "473359703960",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06f14de523b3a40be"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:internet-gateway/igw-0508360f3f8e14203",
            "id": "igw-0508360f3f8e14203",
            "owner_id": "473359703960",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01533efce9840e66e"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.this",
            "module.vpc-dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0508360f3f8e14203",
            "id": "r-rtb-0f7d2b752538cfbc91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f7d2b752538cfbc9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.this",
            "module.vpc-dev.aws_route_table.public",
            "module.vpc-dev.aws_vpc.this",
            "module.vpc-dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:route-table/rtb-029c57db40c087c85",
            "id": "rtb-029c57db40c087c85",
            "owner_id": "473359703960",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01533efce9840e66e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-dev.aws_vpc.this",
            "module.vpc-dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:route-table/rtb-0fa6bb4f1abb742f5",
            "id": "rtb-0fa6bb4f1abb742f5",
            "owner_id": "473359703960",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01533efce9840e66e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-dev.aws_vpc.this",
            "module.vpc-dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:route-table/rtb-035de2d0671045544",
            "id": "rtb-035de2d0671045544",
            "owner_id": "473359703960",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-ap-southeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-private-ap-southeast-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01533efce9840e66e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-dev.aws_vpc.this",
            "module.vpc-dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:route-table/rtb-0f7d2b752538cfbc9",
            "id": "rtb-0f7d2b752538cfbc9",
            "owner_id": "473359703960",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01533efce9840e66e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-dev.aws_vpc.this",
            "module.vpc-dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b76ee2d04c4f646",
            "route_table_id": "rtb-029c57db40c087c85",
            "subnet_id": "subnet-0f3d58f539a69169c"
          },
          "dependencies": [
            "module.vpc-dev.aws_route_table.private",
            "module.vpc-dev.aws_subnet.private",
            "module.vpc-dev.aws_vpc.this",
            "module.vpc-dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d97d68b4848dc6a1",
            "route_table_id": "rtb-0fa6bb4f1abb742f5",
            "subnet_id": "subnet-004115216ffb39f36"
          },
          "dependencies": [
            "module.vpc-dev.aws_route_table.private",
            "module.vpc-dev.aws_subnet.private",
            "module.vpc-dev.aws_vpc.this",
            "module.vpc-dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d116795b73f7256f",
            "route_table_id": "rtb-035de2d0671045544",
            "subnet_id": "subnet-0f4dd7a6d01ec61b1"
          },
          "dependencies": [
            "module.vpc-dev.aws_route_table.private",
            "module.vpc-dev.aws_subnet.private",
            "module.vpc-dev.aws_vpc.this",
            "module.vpc-dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007ac8c77f75e6f1c",
            "route_table_id": "rtb-0f7d2b752538cfbc9",
            "subnet_id": "subnet-05e1ed68f0ace82d9"
          },
          "dependencies": [
            "module.vpc-dev.aws_route_table.public",
            "module.vpc-dev.aws_subnet.public",
            "module.vpc-dev.aws_vpc.this",
            "module.vpc-dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef6a31d4e30cd320",
            "route_table_id": "rtb-0f7d2b752538cfbc9",
            "subnet_id": "subnet-030fefe2798832e28"
          },
          "dependencies": [
            "module.vpc-dev.aws_route_table.public",
            "module.vpc-dev.aws_subnet.public",
            "module.vpc-dev.aws_vpc.this",
            "module.vpc-dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5e0f387bc141342",
            "route_table_id": "rtb-0f7d2b752538cfbc9",
            "subnet_id": "subnet-0b578988f780d5d1e"
          },
          "dependencies": [
            "module.vpc-dev.aws_route_table.public",
            "module.vpc-dev.aws_subnet.public",
            "module.vpc-dev.aws_vpc.this",
            "module.vpc-dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:subnet/subnet-0f3d58f539a69169c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3d58f539a69169c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473359703960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01533efce9840e66e"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.this",
            "module.vpc-dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:subnet/subnet-004115216ffb39f36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004115216ffb39f36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473359703960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01533efce9840e66e"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.this",
            "module.vpc-dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:subnet/subnet-0f4dd7a6d01ec61b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4dd7a6d01ec61b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473359703960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-ap-southeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-private-ap-southeast-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01533efce9840e66e"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.this",
            "module.vpc-dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:subnet/subnet-05e1ed68f0ace82d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e1ed68f0ace82d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473359703960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-public-ap-southeast-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01533efce9840e66e"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.this",
            "module.vpc-dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:subnet/subnet-030fefe2798832e28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030fefe2798832e28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473359703960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public-ap-southeast-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-public-ap-southeast-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01533efce9840e66e"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.this",
            "module.vpc-dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:subnet/subnet-0b578988f780d5d1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b578988f780d5d1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473359703960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public-ap-southeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-public-ap-southeast-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01533efce9840e66e"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.this",
            "module.vpc-dev.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:vpc/vpc-01533efce9840e66e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fe19da39a9152619",
            "default_route_table_id": "rtb-012226723d3ae05a7",
            "default_security_group_id": "sg-08d12b78a3ec6f7eb",
            "dhcp_options_id": "dopt-0da3c68c1a3b5c853",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01533efce9840e66e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-012226723d3ae05a7",
            "owner_id": "473359703960",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:internet-gateway/igw-0494c008c265db952",
            "id": "igw-0494c008c265db952",
            "owner_id": "473359703960",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod",
              "Terraform": "true"
            },
            "vpc_id": "vpc-091a32e46ae2dafa4"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.this",
            "module.vpc-prod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0494c008c265db952",
            "id": "r-rtb-07a9cbae8e95088291080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07a9cbae8e9508829",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.this",
            "module.vpc-prod.aws_route_table.public",
            "module.vpc-prod.aws_vpc.this",
            "module.vpc-prod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:route-table/rtb-09000455ce322dc81",
            "id": "rtb-09000455ce322dc81",
            "owner_id": "473359703960",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-091a32e46ae2dafa4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_vpc.this",
            "module.vpc-prod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:route-table/rtb-05b1f1fa719ed7619",
            "id": "rtb-05b1f1fa719ed7619",
            "owner_id": "473359703960",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-091a32e46ae2dafa4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_vpc.this",
            "module.vpc-prod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:route-table/rtb-057fc9e467309c90a",
            "id": "rtb-057fc9e467309c90a",
            "owner_id": "473359703960",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-091a32e46ae2dafa4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_vpc.this",
            "module.vpc-prod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:route-table/rtb-07a9cbae8e9508829",
            "id": "rtb-07a9cbae8e9508829",
            "owner_id": "473359703960",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-091a32e46ae2dafa4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_vpc.this",
            "module.vpc-prod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062dd4462e74f38c1",
            "route_table_id": "rtb-09000455ce322dc81",
            "subnet_id": "subnet-0005d4d6694f132f2"
          },
          "dependencies": [
            "module.vpc-prod.aws_route_table.private",
            "module.vpc-prod.aws_subnet.private",
            "module.vpc-prod.aws_vpc.this",
            "module.vpc-prod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2295e4cb3031c37",
            "route_table_id": "rtb-05b1f1fa719ed7619",
            "subnet_id": "subnet-0543f0e4da93ab123"
          },
          "dependencies": [
            "module.vpc-prod.aws_route_table.private",
            "module.vpc-prod.aws_subnet.private",
            "module.vpc-prod.aws_vpc.this",
            "module.vpc-prod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7f38621959d8644",
            "route_table_id": "rtb-057fc9e467309c90a",
            "subnet_id": "subnet-07c1417e69ab7353e"
          },
          "dependencies": [
            "module.vpc-prod.aws_route_table.private",
            "module.vpc-prod.aws_subnet.private",
            "module.vpc-prod.aws_vpc.this",
            "module.vpc-prod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0709b157578c552e3",
            "route_table_id": "rtb-07a9cbae8e9508829",
            "subnet_id": "subnet-003cc8f4c5c635e22"
          },
          "dependencies": [
            "module.vpc-prod.aws_route_table.public",
            "module.vpc-prod.aws_subnet.public",
            "module.vpc-prod.aws_vpc.this",
            "module.vpc-prod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07aae5b24493f39fe",
            "route_table_id": "rtb-07a9cbae8e9508829",
            "subnet_id": "subnet-0adaff9f1d8cd992b"
          },
          "dependencies": [
            "module.vpc-prod.aws_route_table.public",
            "module.vpc-prod.aws_subnet.public",
            "module.vpc-prod.aws_vpc.this",
            "module.vpc-prod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af0b80c75a6183bf",
            "route_table_id": "rtb-07a9cbae8e9508829",
            "subnet_id": "subnet-0b0f6abab62a197ff"
          },
          "dependencies": [
            "module.vpc-prod.aws_route_table.public",
            "module.vpc-prod.aws_subnet.public",
            "module.vpc-prod.aws_vpc.this",
            "module.vpc-prod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:subnet/subnet-0005d4d6694f132f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0005d4d6694f132f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473359703960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-091a32e46ae2dafa4"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.this",
            "module.vpc-prod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:subnet/subnet-0543f0e4da93ab123",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0543f0e4da93ab123",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473359703960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-091a32e46ae2dafa4"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.this",
            "module.vpc-prod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:subnet/subnet-07c1417e69ab7353e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c1417e69ab7353e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473359703960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-private-ap-southeast-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-091a32e46ae2dafa4"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.this",
            "module.vpc-prod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:subnet/subnet-003cc8f4c5c635e22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003cc8f4c5c635e22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473359703960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-public-ap-southeast-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-public-ap-southeast-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-091a32e46ae2dafa4"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.this",
            "module.vpc-prod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:subnet/subnet-0adaff9f1d8cd992b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adaff9f1d8cd992b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473359703960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-public-ap-southeast-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-public-ap-southeast-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-091a32e46ae2dafa4"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.this",
            "module.vpc-prod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:subnet/subnet-0b0f6abab62a197ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0f6abab62a197ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "473359703960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod-public-ap-southeast-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod-public-ap-southeast-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-091a32e46ae2dafa4"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.this",
            "module.vpc-prod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:473359703960:vpc/vpc-091a32e46ae2dafa4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f83238be6de40e13",
            "default_route_table_id": "rtb-0d5430ba7a0d4391c",
            "default_security_group_id": "sg-0ceaf13c54802a76c",
            "dhcp_options_id": "dopt-0da3c68c1a3b5c853",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-091a32e46ae2dafa4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d5430ba7a0d4391c",
            "owner_id": "473359703960",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-prod",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-prod",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}